# learning_workspace

./: .bazelrc  .gitignore  BUILD.bazel  Dockerfile  MODULE.bazel  README.md  WORKSPACE  bazel-bin  bazel-opencv_learning  bazel-out  bazel-testlogs  requirements.in  requirements_darwin.txt  requirements_linux.txt
src/boost/geometry_learning/: BUILD  geometry_learning.cpp
src/examples/boost_example/: BUILD  main.cpp
src/examples/cuda_example/: BUILD  deviceQuery.cpp
src/examples/eigen_example/: BUILD  eigen_example.cpp
src/examples/glfw_example/: BUILD  main.cpp  pcl_view.cpp
src/examples/open3d_example/: BUILD  main.cpp  source_pointcloud.pcd
src/examples/opencv_example/: BUILD  main.cpp
src/examples/pcl_example/: BUILD  BUILDas  main.cpp
src/examples/python_example/: BUILD  matplotlib_example.py  polygon.py  python_example.py
src/examples/thrust_example/: BUILD  thrust.cu
src/examples/vulkan_example/: BUILD  list_extensions.cpp
src/imgui/: BUILD  imgui.cpp  imgui.h  imgui_draw.cpp  imgui_tables.cpp  imgui_widgets.cpp
src/imgui/backends/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_metal.h  imgui_impl_metal.mm  imgui_impl_opengl2.cpp  imgui_impl_opengl2.h  imgui_impl_osx.h  imgui_impl_osx.mm  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
src/imgui/backends/vulkan/: glsl_shader.frag.u32  glsl_shader.vert.u32
src/imgui/examples/example_apple_opengl2/: main.mm
src/imgui/examples/example_glfw_metal/: main.mm
src/imgui/examples/example_glfw_opengl3/: main.cpp
src/imgui/examples/example_glfw_vulkan/: main.cpp
src/imgui/include/: imconfig.h
src/line_detect/: BUILD  LineFitting.cpp  LineFitting.hpp  main.cpp
src/opencv/gradient_testing/: BUILD  edge.cpp  main.cpp
src/opencv/image_processor/: BUILD  main.cpp
src/opencv/line_detect/: LineFitting.cpp  main.cpp
src/opencv/sift_feature_matching/: BUILD  pcdtoimage.cpp  sift_main.cpp
src/pcl/registration_pointclouds/: BUILD  registration_pointcloud.cpp  target_pointcloud.pcd
src/thrust/01_vector/: 01_vector.cu  BUILD
src/thrust/02_vector/: 02_vector.cu  BUILD
src/thrust/03_pointer/: 03_pointer.cu  BUILD
src/thrust/04_algorithms/01_searching/01_find/: 01_find.cpp  01_thrust_find.cu  BUILD
src/thrust/04_algorithms/01_searching/02_find_if/: 02_find_if.cpp  02_thrust_find_if.cu  BUILD
src/thrust/04_algorithms/01_searching/03_find_if_not/: 02_find_if_not.cpp  02_thrust_find_if_not.cu  BUILD
src/thrust/04_algorithms/01_searching/04_thrust_mismatch/: 04_mismatch.cpp  04_thrust_mismatch.cpp  BUILD
