platform(
    name = "linux_platform",
    constraint_values = [
        "@platforms//os:linux",
    ],
    visibility = ["//visibility:public"],
)

platform(
    name = "macos_platform",
    constraint_values = [
        "@platforms//os:macos",
    ],
    visibility = ["//visibility:public"],
)

load("@rules_pcl//bzl:pcl.bzl", "pcl_config")

pcl_config()

load("@rules_python//python:defs.bzl", "py_binary")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")

compile_pip_requirements(
    name = "python_requirements",
    extra_args = ["--allow-unsafe"],
    requirements_darwin = "//:requirements_darwin.txt",
    requirements_in = "//:requirements.in",
    requirements_linux = "//:requirements_linux.txt",
    requirements_txt = "//:requirements_lock.txt",
)

##
exports_files([
    "requirements.in",
    "requirements_lock.txt",
    "requirements_linux.txt",
    "requirements_darwin.txt",
])
